# SGX-service-provider-py

./: .gitignore  README.md  enclave_server.py  server.py  sgx_ias.py  sgx_ra.py  test.py
EnclaveCoin/: CMakeLists.txt
EnclaveCoin/app/: app.cpp
EnclaveCoin/cmake/: FindSGX.cmake
EnclaveCoin/enclave/: enclave.cpp  peer_public.h
EnclaveCoin/enclave/meta/: enclave.config.xml  enclave.edl  enclave_private.pem
EnclaveCoin/utils/: CMakeLists.txt  search_shared_library.cpp  sgx_exception.hpp  utils.hpp
Host/: cmd_interface.py  remote_client.py  sgx_ra.py
